# imagecolor

./: .gitignore  .travis.yml  LICENSE.md  LICENSE.rst  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  release_build.sh  run_tests.sh  setup.py
.github/workflows/: build.yml  python-poetry-package.yml  release.yml
docs/: Makefile  make.bat
docs/source/: conf.py  imagecolor.rst  includereadme.rst  index.rst  modules.rst
image_colors/: __init__.py  image_average.py
imagecolor/: __init__.py  average.py  exceptions.py  loadsave.py  utilities.py
test/: conftest.py  test_basic.py
